@startuml





/' Objects '/

class scoped_logger {
	+scoped_logger(const std::string& className, const char* funcName, unsigned line)
	+~scoped_logger()
	-_ss : std::stringstream
	+stream() : std::stringstream&
}


namespace cmder {
	abstract class IControllableThread {
		+{abstract} getStatus() : int {query}
		+{abstract} start() : void
		+{abstract} stop() : void
	}

	abstract class IStatProvider {
		+{abstract} statNotification(const std::string& notificationName) : uint64_t {query}
	}

	enum CallbackMessageType_t {
		NOTIFICATION
		RESULT
	}

	enum ExecutionMode_t {
		Async
		Blocking
	}

	enum Status {
		Init
		Run
		Start
		Stop
	}

	namespace tst {
		class AgentTest {
			#{static} sServer : Server
			#{static} sAsyncAgent : static Agent::SharedPtr
			#{static} sNoCallbackAgent : static Agent::SharedPtr
			#{static} sCallback : static Callback::SharedPtr
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#{static} TearDownTestSuite() : void
		}

		class CallbackTest {
			#{static} sCallback : static Callback::SharedPtr
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#{static} TearDownTestSuite() : void
		}

		class CoroutineCpp20Test {
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#{static} TearDownTestSuite() : void
		}

		class ServerTest {
			#mServer : std::unique_ptr<Server>
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#TearDown() : void
			#{static} TearDownTestSuite() : void
		}

		class ThreadPoolTest {
			#mThreadPool : std::unique_ptr<ThreadPool>
			#SetUp() : void
			#{static} SetUpTestSuite() : void
			#TearDown() : void
			#{static} TearDownTestSuite() : void
		}
	}

	namespace tools {
		class ThreadPool {
			+ThreadPool(size_t threadCount)
			-function<void()
			+result_of_t<F(Args ... )>>execute ( F&& f, Args&& ... args)
			+~ThreadPool()
			-mStopThreadPool : bool
			-mConditionVariable : std::condition_variable
			-mMutex : std::mutex
			-mThreads : std::vector<std::thread>
		}
	}

	namespace srv {
		class Server {
			+Server()
			+~Server()
			+getStatus() : Status {query}
			-mStatus : Status
			-mAgents : map<AgentName_t, AgentInfo>
			-mMutex : mutable std::mutex
			-mConditionVariable : std::condition_variable
			-mNotificationStatistics : std::map<std::string, uint64_t>
			-mThreadPtr : std::unique_ptr<std::thread>
			+statNotification(const std::string& notificationName) : uint64_t {query}
			+registerAgent(const std::string& agentName, const Callback::SharedPtr& callback) : void
			-run() : void
			+start() : void
			+stop() : void
			+unregisterAgent(const std::string& agentName) : void
			-unregisterAgentUnsafe(const std::string& agentName) : void
		}

		class Server::AgentInfo {
			+AgentInfo(string n, const Callback::SharedPtr& sp)
			+mCallback : Callback::WeakPtr
			+mHasCallback : bool
			+mAgentName : string
		}
	}

	namespace cb {
		class Callback {
			+Callback()
			+~Callback()
			+empty() : bool {query}
			-mMutex : mutable std::mutex
			+size() : size_t {query}
			+operator<<(std::ostream& ostr, const Callback::SharedPtr& cb) : std :: ostream&
			-mConditionVariable : std::condition_variable
			+pop() : std::optional<Message_t>
			+tryPop() : std::optional<Message_t>
			-mMessages : std::queue<Message_t>
			-mOwnerName : std::string
			+clear() : void
			+notify(TaskId_t taskId, CallbackMessageType_t type, const std::string& message) : void
			+setOwner(const std::string& owner) : void
		}

		class Callback::Message_t {
			+mType : CallbackMessageType_t
			+mTime : ChronoTime_t
			+mTaskId : TaskId_t
			+mText : std::string
		}
	}

	namespace agent {
		class Agent {
			-Agent(Server server, Callback::SharedPtr callback)
			+~Agent()
			-mCallbackAgent : Callback::SharedPtr
			-mCallbackUser : Callback::WeakPtr
			+doTask(ExecutionMode_t mode, const TaskName& task, std::string& result) : Receipt {query}
			-mServer : Server
			+{static} create(Server server, Callback::SharedPtr callback) : SharedPtr
			+getStatus() : Status {query}
			-mStatus : Status
			-mMutex : mutable std::mutex
			-mConditionVariable : std::condition_variable
			-mDebugName : std::string
			+getName() : std::string& {query}
			-mThreadPtr : std::unique_ptr<std::thread>
			+statNotification(const std::string& notificationName) : uint64_t {query}
			+registerAgent() : void
			-run() : void
			+start() : void
			+stop() : void
			+unregisterAgent() : void
		}

		class Receipt {
			+Receipt(ExecutionMode_t mode)
			-mEndTime : ChronoTime_t
			-mStartTime : ChronoTime_t
			+getEndTime() : ChronoTime_t& {query}
			+getStartTime() : ChronoTime_t& {query}
			+getExecutionMode() : ExecutionMode_t {query}
			-mStatus : Status_t
			+getTaskId() : TaskId_t {query}
			-mMode : const ExecutionMode_t
			-mTaskId : const TaskId_t
			+getStatus() : int {query}
			+setEndTime() : void
			+setStatus(Status_t status) : void
		}

		class Task {
			-mTaskConfiguration : std::vector<TaskConfig>
		}

		enum Receipt::Status_t {
			FAIL
			OK
		}

		enum TaskName {
			BlockMe_3s
			Pi
			PingMe_5x
		}

		class Task::TaskConfig {
		}
	}
}





/' Inheritance relationships '/

cmder.IControllableThread <|-- cmder.agent.Agent


cmder.IControllableThread <|-- cmder.srv.Server


cmder.IStatProvider <|-- cmder.agent.Agent


cmder.IStatProvider <|-- cmder.srv.Server





/' Aggregation relationships '/

cmder.agent.Agent "2" *-- cmder.cb.Callback


cmder.agent.Agent *-- cmder.srv.Server


cmder.agent.Agent *-- cmder.Status


cmder.tst.AgentTest "2" *-- cmder.agent.Agent


cmder.tst.AgentTest *-- cmder.cb.Callback


cmder.tst.AgentTest *-- cmder.srv.Server


cmder.cb.Callback::Message_t *-- cmder.CallbackMessageType_t


cmder.tst.CallbackTest *-- cmder.cb.Callback


cmder.agent.Receipt *-- cmder.ExecutionMode_t


cmder.srv.Server *-- cmder.Status


cmder.srv.Server::AgentInfo *-- cmder.cb.Callback


cmder.tst.ServerTest *-- cmder.srv.Server


cmder.tst.ThreadPoolTest *-- cmder.tools.ThreadPool






/' Nested objects '/

cmder.cb.Callback +-- cmder.cb.Callback::Message_t


cmder.agent.Receipt +-- cmder.agent.Receipt::Status_t


cmder.srv.Server +-- cmder.srv.Server::AgentInfo


cmder.agent.Task +-- cmder.agent.Task::TaskConfig




@enduml
